Revert back to where it's single-threaded job